# synthesmaller

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  gui.py  partitions.csv  sdkconfig.defaults
ili9341/: README.md
main/: CMakeLists.txt  display.cpp  display.h  main.c  midi_input.c  midi_input.h  pinout.h  preset.c  preset.h  synth.c  synth.h
tlv320aic3104/: CMakeLists.txt  speaker_output.h  tlv320aic3104.c
tlv320aic3104/include/: tlv320aic3104.h
tlv320aic3104/register_map/: csv_to_c.py  speaker_output.csv
widgets/: __init__.py  button_selector_widgets.py  push_button_widget.py  slider_widget.py  toggle_button_widget.py
